--- a/index.html
+++ b/index.html
@@ -1,135 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Simple Platformer</title>
-  <style>
-    body {
-      margin: 0;
-      background: #111;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    canvas {
-      background: #222;
-      border: 2px solid #555;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Hard Platformer</title>
+<style>
+body {
+  margin: 0;
+  background: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+canvas {
+  background: #111;
+  border: 2px solid #555;
+}
+</style>
 </head>
 <body>
-  <canvas id="game" width="800" height="400"></canvas>
 
-  <script>
-    const canvas = document.getElementById("game");
-    const ctx = canvas.getContext("2d");
+<canvas id="game" width="800" height="400"></canvas>
 
-    const gravity = 0.6;
-    const keys = {};
+<script>
+const canvas = document.getElementById("game");
+const ctx = canvas.getContext("2d");
 
-    const player = {
-      x: 50,
-      y: 300,
-      w: 30,
-      h: 30,
-      vx: 0,
-      vy: 0,
-      speed: 4,
-      jump: -12,
-      grounded: false
-    };
+const gravity = 0.7;
+const jumpCut = 0.4;
+const keys = {};
 
-    const platforms = [
-      { x: 0,   y: 360, w: 800, h: 40 },
-      { x: 200, y: 300, w: 120, h: 20 },
-      { x: 380, y: 250, w: 120, h: 20 },
-      { x: 560, y: 200, w: 120, h: 20 }
-    ];
+let deaths = 0;
+let startTime = performance.now();
+let shake = 0;
 
-    const goal = { x: 700, y: 160, w: 40, h: 40 };
+let currentRun = [];
+let bestGhost = JSON.parse(localStorage.getItem("bestGhost")) || null;
+let bestTime = Number(localStorage.getItem("bestTime")) || null;
 
-    document.addEventListener("keydown", e => keys[e.code] = true);
-    document.addEventListener("keyup",   e => keys[e.code] = false);
+const player = {
+  x: 50, y: 300, w: 30, h: 30,
+  vx: 0, vy: 0,
+  speed: 0.6,
+  maxSpeed: 4,
+  jump: -13,
+  grounded: false,
+  wall: false,
+  coyote: 0,
+  buffer: 0,
+  facing: 1,
+  dashSpeed: 10,
+  dashTime: 0,
+  dashCooldown: 0
+};
 
-    function update() {
-      // Horizontal movement
-      if (keys["ArrowLeft"])  player.vx = -player.speed;
-      else if (keys["ArrowRight"]) player.vx = player.speed;
-      else player.vx = 0;
+const level = {
+  platforms: [{x:0,y:360,w:800,h:40}],
+  moving: [{x:200,y:280,w:120,h:20,dx:1.4,range:150,startX:200}],
+  spikes: [{x:0,y:340,w:800,h:20}],
+  goal: {x:720,y:80,w:40,h:40}
+};
 
-      // Jump
-      if (keys["Space"] && player.grounded) {
-        player.vy = player.jump;
-        player.grounded = false;
-      }
+function rect(a,b){
+  return a.x < b.x+b.w && a.x+a.w > b.x &&
+         a.y < b.y+b.h && a.y+a.h > b.y;
+}
 
-      // Gravity
-      player.vy += gravity;
+document.addEventListener("keydown", e => {
+  keys[e.code] = true;
+  if (e.code === "KeyR") resetRun();
+});
+document.addEventListener("keyup", e => keys[e.code] = false);
 
-      // Apply movement
-      player.x += player.vx;
-      player.y += player.vy;
+function resetRun(){
+  deaths++;
+  shake = 10;
+  player.x = 50;
+  player.y = 300;
+  player.vx = player.vy = 0;
+  startTime = performance.now();
+  currentRun = [];
+}
 
-      // Platform collision
-      player.grounded = false;
-      for (const p of platforms) {
-        if (
-          player.x < p.x + p.w &&
-          player.x + player.w > p.x &&
-          player.y < p.y + p.h &&
-          player.y + player.h > p.y
-        ) {
-          if (player.vy > 0) {
-            player.y = p.y - player.h;
-            player.vy = 0;
-            player.grounded = true;
-          }
-        }
-      }
+function updateMoving(){
+  level.moving.forEach(p=>{
+    p.x += p.dx;
+    if (Math.abs(p.x - p.startX) > p.range) p.dx *= -1;
+  });
+}
 
-      // Bounds
-      if (player.x < 0) player.x = 0;
-      if (player.x + player.w > canvas.width)
-        player.x = canvas.width - player.w;
+function update(){
+  // INPUT
+  if (keys.KeyA) { player.vx -= player.speed; player.facing = -1; }
+  if (keys.KeyD) { player.vx += player.speed; player.facing = 1; }
 
-      // Win condition
-      if (
-        player.x < goal.x + goal.w &&
-        player.x + player.w > goal.x &&
-        player.y < goal.y + goal.h &&
-        player.y + player.h > goal.y
-      ) {
-        alert("You win!");
-        location.reload();
+  player.vx *= 0.9;
+  player.vx = Math.max(-player.maxSpeed, Math.min(player.maxSpeed, player.vx));
+
+  if (keys.KeyW) player.buffer = 6;
+  else player.buffer--;
+
+  // DASH
+  if ((keys.ShiftLeft || keys.ShiftRight) && player.dashCooldown <= 0) {
+    player.dashTime = 8;
+    player.dashCooldown = 30;
+  }
+
+  // PHYSICS
+  if (player.dashTime > 0) {
+    player.vy = 0;
+    player.vx = player.facing * player.dashSpeed;
+    player.dashTime--;
+  } else {
+    player.vy += gravity;
+    player.dashCooldown--;
+  }
+
+  player.x += player.vx;
+  player.y += player.vy;
+
+  player.grounded = false;
+  player.wall = false;
+
+  [...level.platforms, ...level.moving].forEach(p=>{
+    if (rect(player,p)) {
+      if (player.vy > 0) {
+        player.y = p.y - player.h;
+        player.vy = 0;
+        player.grounded = true;
+        player.coyote = 6;
+        if (p.dx) player.x += p.dx;
+      } else {
+        player.wall = true;
+        player.vy *= 0.5;
       }
     }
+  });
 
-    function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
+  if (!player.grounded) player.coyote--;
 
-      // Player
-      ctx.fillStyle = "#4CAF50";
-      ctx.fillRect(player.x, player.y, player.w, player.h);
-
-      // Platforms
-      ctx.fillStyle = "#888";
-      platforms.forEach(p =>
-        ctx.fillRect(p.x, p.y, p.w, p.h)
-      );
-
-      // Goal
-      ctx.fillStyle = "#FFD700";
-      ctx.fillRect(goal.x, goal.y, goal.w, goal.h);
+  // JUMP
+  if (player.buffer > 0) {
+    if (player.coyote > 0) {
+      player.vy = player.jump;
+      player.buffer = 0;
+    } else if (player.wall) {
+      player.vy = player.jump;
+      player.vx = -player.facing * 6;
+      player.buffer = 0;
     }
+  }
 
-    function loop() {
-      update();
-      draw();
-      requestAnimationFrame(loop);
+  // VARIABLE JUMP
+  if (!keys.KeyW && player.vy < 0) {
+    player.vy *= jumpCut;
+  }
+
+  // DEATH
+  level.spikes.forEach(s => { if (rect(player,s)) resetRun(); });
+  if (player.y > canvas.height) resetRun();
+
+  // RECORD CURRENT RUN
+  currentRun.push({x: player.x, y: player.y});
+
+  // GOAL
+  if (rect(player, level.goal)) {
+    const time = ((performance.now() - startTime) / 1000).toFixed(2);
+    if (!bestTime || time < bestTime) {
+      bestTime = time;
+      bestGhost = [...currentRun];
+      localStorage.setItem("bestTime", bestTime);
+      localStorage.setItem("bestGhost", JSON.stringify(bestGhost));
     }
+    alert(`FINISH!\nTime: ${time}s\nDeaths: ${deaths}`);
+    resetRun();
+  }
 
-    loop();
-  </script>
+  updateMoving();
+}
+
+function draw(){
+  ctx.save();
+  if (shake) {
+    ctx.translate((Math.random()-0.5)*shake,(Math.random()-0.5)*shake);
+    shake--;
+  }
+
+  ctx.clearRect(0,0,800,400);
+
+  // GHOST
+  if (bestGhost) {
+    const i = currentRun.length;
+    if (bestGhost[i]) {
+      ctx.fillStyle = "rgba(0,255,255,0.35)";
+      ctx.fillRect(bestGhost[i].x, bestGhost[i].y, 30, 30);
+    }
+  }
+
+  // PLAYER
+  ctx.fillStyle = "#4CAF50";
+  ctx.fillRect(player.x, player.y, 30, 30);
+
+  // LEVEL
+  ctx.fillStyle = "#888";
+  level.platforms.forEach(p=>ctx.fillRect(p.x,p.y,p.w,p.h));
+
+  ctx.fillStyle = "#AAA";
+  level.moving.forEach(p=>ctx.fillRect(p.x,p.y,p.w,p.h));
+
+  ctx.fillStyle = "red";
+  level.spikes.forEach(s=>ctx.fillRect(s.x,s.y,s.w,s.h));
+
+  ctx.fillStyle = "gold";
+  ctx.fillRect(level.goal.x, level.goal.y, level.goal.w, level.goal.h);
+
+  // UI
+  ctx.fillStyle = "#fff";
+  ctx.font = "16px monospace";
+  const t = ((performance.now()-startTime)/1000).toFixed(2);
+  ctx.fillText(`Time: ${t}s`, 10, 20);
+  if (bestTime) ctx.fillText(`Best: ${bestTime}s`, 10, 40);
+  ctx.fillText(`Deaths: ${deaths}`, 10, 60);
+
+  ctx.restore();
+}
+
+function loop(){
+  update();
+  draw();
+  requestAnimationFrame(loop);
+}
+
+loop();
+</script>
+
 </body>
 </html>
