--- a/index.html
+++ b/index.html
@@ -1,27 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>Hard Platformer</title>
-<style>
-body {
-  margin: 0;
-  background: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-canvas {
-  background: #111;
-  border: 2px solid #555;
-}
-</style>
-</head>
-<body>
-
-<canvas id="game" width="800" height="400"></canvas>
-
 <script>
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
@@ -44,20 +20,18 @@ const player = {
   vx: 0, vy: 0,
   speed: 0.6,
   maxSpeed: 4,
-  jump: -13,
+  jump: -14,              // slight buff to replace dash
   grounded: false,
   wall: false,
   coyote: 0,
   buffer: 0,
-  facing: 1,
-  dashSpeed: 9,
-  dashTime: 0,
-  dashCooldown: 0
+  facing: 1
 };
 
 const level = {
   platforms: [
-    { x: 0, y: 360, w: 800, h: 40 }
+    { x: 0, y: 360, w: 800, h: 40 },
+    { x: 520, y: 210, w: 120, h: 20 } // landing after moving platform
   ],
   moving: [
     { x: 220, y: 260, w: 120, h: 20, dx: 1.2, range: 160, startX: 220 }
@@ -65,7 +39,7 @@ const level = {
   spikes: [
     { x: 0, y: 380, w: 800, h: 20 }
   ],
-  goal: { x: 720, y: 80, w: 40, h: 40 }
+  goal: { x: 720, y: 160, w: 40, h: 40 } // lowered for no-dash completion
 };
 
 function rect(a, b) {
@@ -111,25 +85,8 @@ function update() {
   if (keys.KeyW) player.buffer = 6;
   else player.buffer--;
 
-  // DASH (ground or wall only)
-  if (
-    (keys.ShiftLeft || keys.ShiftRight) &&
-    player.dashCooldown <= 0 &&
-    (player.grounded || player.wall)
-  ) {
-    player.dashTime = 8;
-    player.dashCooldown = 25;
-  }
-
   // PHYSICS
-  if (player.dashTime > 0) {
-    player.vy = 0;
-    player.vx = player.facing * player.dashSpeed;
-    player.dashTime--;
-  } else {
-    player.vy += gravity;
-    player.dashCooldown--;
-  }
+  player.vy += gravity;
 
   player.x += player.vx;
   player.y += player.vy;
@@ -160,7 +117,7 @@ function update() {
 
   if (!player.grounded) player.coyote--;
 
-  // JUMP
+  // JUMP / WALL JUMP
   if (player.buffer > 0) {
     if (player.coyote > 0) {
       player.vy = player.jump;
@@ -177,7 +134,7 @@ function update() {
     player.vy *= jumpCut;
   }
 
-  // DEATH (fully enabled)
+  // DEATH
   if (spawnGrace <= 0) {
     level.spikes.forEach(s => {
       if (rect(player, s)) resetRun();
@@ -188,7 +145,7 @@ function update() {
 
   currentRun.push({ x: player.x, y: player.y });
 
-  // GOAL (reachable jump path is guaranteed)
+  // GOAL
   if (rect(player, level.goal)) {
     const time = ((performance.now() - startTime) / 1000).toFixed(2);
     if (!bestTime || time < bestTime) {
@@ -213,7 +170,6 @@ function draw() {
 
   ctx.clearRect(0, 0, 800, 400);
 
-  // GHOST
   if (bestGhost) {
     const i = currentRun.length;
     if (bestGhost[i]) {
@@ -222,11 +178,9 @@ function draw() {
     }
   }
 
-  // PLAYER
   ctx.fillStyle = "#4CAF50";
   ctx.fillRect(player.x, player.y, 30, 30);
 
-  // LEVEL
   ctx.fillStyle = "#888";
   level.platforms.forEach(p => ctx.fillRect(p.x, p.y, p.w, p.h));
 
@@ -239,7 +193,6 @@ function draw() {
   ctx.fillStyle = "gold";
   ctx.fillRect(level.goal.x, level.goal.y, level.goal.w, level.goal.h);
 
-  // UI
   ctx.fillStyle = "#fff";
   ctx.font = "16px monospace";
   const t = ((performance.now() - startTime) / 1000).toFixed(2);
@@ -258,6 +211,3 @@ function loop() {
 
 loop();
 </script>
-
-</body>
-</html>
