--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ const BIOMES = [
    LEVEL GENERATION
 ===================================================== */
 function generateLevel(n) {
-  const biome = Math.floor(n / BIOME_SIZE);
+  const biome = Math.floor(n / BIOME_SIZE) || 0;
   const platforms = [{ x: 0, y: 360, w: 800, h: 40 }];
   const moving = [];
   const spikes = [];
@@ -285,18 +285,26 @@ loadGame() || (level = generateLevel(0));
    UPDATE
 ===================================================== */
 function update() {
-  if (!timerRunning && (keys.KeyA || keys.KeyD || keys.KeyW))
-    startTimer();
+  if (!timerRunning && (
+    keys.KeyA || keys.KeyD || keys.KeyW ||
+    keys.ArrowLeft || keys.ArrowRight || keys.ArrowUp
+  )) startTimer();
 
   if (spawnGrace > 0) spawnGrace--;
 
-  if (keys.KeyA) { player.vx -= player.speed; player.facing = -1; }
-  if (keys.KeyD) { player.vx += player.speed; player.facing = 1; }
+  if (keys.KeyA || keys.ArrowLeft) {
+    player.vx -= player.speed;
+    player.facing = -1;
+  }
+  if (keys.KeyD || keys.ArrowRight) {
+    player.vx += player.speed;
+    player.facing = 1;
+  }
 
   player.vx *= 0.9;
   player.vx = Math.max(-player.maxSpeed, Math.min(player.maxSpeed, player.vx));
 
-  player.buffer = keys.KeyW ? 6 : player.buffer - 1;
+  player.buffer = (keys.KeyW || keys.ArrowUp) ? 6 : Math.max(0, player.buffer - 1);
 
   player.vy += gravity;
   player.x += player.vx;
@@ -326,7 +334,8 @@ function update() {
     player.buffer = 0;
   }
 
-  if (!keys.KeyW && player.vy < 0) player.vy *= jumpCut;
+  if (!(keys.KeyW || keys.ArrowUp) && player.vy < 0)
+    player.vy *= jumpCut;
 
   if (spawnGrace <= 0) {
     level.spikes.forEach(s => {
@@ -378,7 +387,10 @@ function draw() {
   ctx.font = "14px monospace";
   ctx.fillText(`Level ${currentLevel+1}/${TOTAL_LEVELS}`, 10, 18);
   ctx.fillText(`Deaths: ${deaths}`, 10, 34);
-  ctx.fillText(`Time: ${getFormattedTime(timerRunning ? performance.now()-runStartTime : runTime)}`, 10, 50);
+  ctx.fillText(
+    `Time: ${getFormattedTime(timerRunning ? performance.now()-runStartTime : runTime)}`,
+    10, 50
+  );
 
   const lb = loadLeaderboard();
   ctx.fillText("🏆 FASTEST RUNS", 520, 20);
