--- a/index.html
+++ b/index.html
@@ -139,63 +139,32 @@ function resetPlayer() {
    BIOMES
 ===================================================== */
 const BIOMES = [
-  { name: "GRASS", bg: "#112", spike: "red" },
-  { name: "ICE", bg: "#0a1a2a", spike: "#7ff" },
-  { name: "LAVA", bg: "#2a0a0a", spike: "orange" },
-  { name: "VOID", bg: "#000", spike: "magenta" }
+  { bg: "#112", spike: "red" },
+  { bg: "#0a1a2a", spike: "#7ff" },
+  { bg: "#2a0a0a", spike: "orange" },
+  { bg: "#000", spike: "magenta" }
 ];
 
 /* =====================================================
    LEVEL GENERATION
 ===================================================== */
 function generateLevel(n) {
-  const biome = Math.floor(n / BIOME_SIZE) || 0;
+  const biome = Math.floor(n / BIOME_SIZE);
   const platforms = [{ x: 0, y: 360, w: 800, h: 40 }];
   const moving = [];
   const spikes = [];
-  let goal = { x: 740, y: 80, w: 40, h: 40 };
+  const goal = { x: 740, y: 80, w: 40, h: 40 };
 
   for (let i = 0; i < 6; i++) {
     platforms.push({
       x: 120 + i * 110,
-      y: 300 - i * (25 + biome * 5),
+      y: 300 - i * 25,
       w: 80,
       h: 20
     });
   }
 
-  if (biome >= 1) {
-    moving.push({
-      x: 300,
-      y: 200,
-      w: 120,
-      h: 20,
-      dx: 1 + biome * 0.5,
-      range: 180,
-      startX: 300
-    });
-  }
-
   spikes.push({ x: 0, y: 380, w: 800, h: 20 });
-
-  if (biome >= 1)
-    spikes.push({ x: 200, y: 0, w: 400, h: 20 });
-
-  if (biome >= 2) {
-    spikes.push({ x: 0, y: 200, w: 20, h: 160 });
-    spikes.push({ x: 780, y: 160, w: 20, h: 200 });
-  }
-
-  if (biome === 3) {
-    for (let i = 0; i < 6; i++) {
-      spikes.push({
-        x: 200 + i * 60,
-        y: i % 2 === 0 ? 140 : 260,
-        w: 40,
-        h: 20
-      });
-    }
-  }
 
   return { platforms, moving, spikes, goal, biome };
 }
@@ -215,80 +184,21 @@ function saveGame() {
 
 function loadGame() {
   const raw = localStorage.getItem(SAVE_KEY);
-  if (!raw) return false;
+  if (!raw) return;
   try {
     const d = JSON.parse(raw);
     currentLevel = d.currentLevel ?? 0;
     checkpointLevel = d.checkpointLevel ?? 0;
     deaths = d.deaths ?? 0;
     runTime = d.runTime ?? 0;
-    for (let x = 0; x < 80; x++)
-      for (let y = 0; y < 40; y++)
-        heatmap[x][y] = d.heatmap?.[x]?.[y] ?? 0;
-    return true;
-  } catch { return false; }
-}
-
-function clearSave() {
-  localStorage.removeItem(SAVE_KEY);
+  } catch {}
 }
 
 /* =====================================================
-   LEADERBOARD
+   INIT (ABSOLUTE SAFETY)
 ===================================================== */
-function loadLeaderboard() {
-  return JSON.parse(localStorage.getItem(LEADERBOARD_KEY) || "[]");
-}
-
-function saveLeaderboard(b) {
-  localStorage.setItem(LEADERBOARD_KEY, JSON.stringify(b));
-}
-
-function addLeaderboardEntry(name, time) {
-  const b = loadLeaderboard();
-  b.push({ name, time });
-  b.sort((a, c) => a.time - c.time);
-  saveLeaderboard(b.slice(0, 5));
-}
-
-/* =====================================================
-   LEVEL FLOW
-===================================================== */
-function nextLevel() {
-  currentLevel++;
-
-  if (currentLevel % BIOME_SIZE === 0)
-    checkpointLevel = currentLevel;
-
-  if (currentLevel >= TOTAL_LEVELS) {
-    stopTimer();
-    const finalTime = runTime;
-    const name = prompt(
-      `YOU BEAT THE GAME 🔥\nTime: ${getFormattedTime(finalTime)}\n\nEnter your name:`,
-      "PLAYER"
-    );
-    if (name) addLeaderboardEntry(name.slice(0, 12), finalTime);
-    clearSave();
-    resetTimer();
-    currentLevel = 0;
-    checkpointLevel = 0;
-    deaths = 0;
-  }
-
-  level = generateLevel(currentLevel);
-  resetPlayer();
-  saveGame();
-}
-
-/* =====================================================
-   INIT (FIXED)
-===================================================== */
-let level;
-if (loadGame()) {
-  level = generateLevel(currentLevel);
-} else {
-  level = generateLevel(0);
-}
+loadGame();
+let level = generateLevel(currentLevel);
 
 /* =====================================================
    UPDATE
@@ -296,78 +206,24 @@ if (loadGame()) {
 function update() {
   if (!gameStarted) return;
 
-  if (!timerRunning && (
-    keys.KeyA || keys.KeyD || keys.KeyW ||
-    keys.ArrowLeft || keys.ArrowRight || keys.ArrowUp
-  )) startTimer();
+  if (!timerRunning &&
+    (keys.KeyA || keys.KeyD || keys.KeyW ||
+     keys.ArrowLeft || keys.ArrowRight || keys.ArrowUp))
+    startTimer();
 
-  if (spawnGrace > 0) spawnGrace--;
-
-  if (keys.KeyA || keys.ArrowLeft) {
-    player.vx -= player.speed;
-    player.facing = -1;
-  }
-  if (keys.KeyD || keys.ArrowRight) {
-    player.vx += player.speed;
-    player.facing = 1;
-  }
+  if (keys.KeyA || keys.ArrowLeft) player.vx -= player.speed;
+  if (keys.KeyD || keys.ArrowRight) player.vx += player.speed;
 
   player.vx *= 0.9;
-  player.vx = Math.max(-player.maxSpeed, Math.min(player.maxSpeed, player.vx));
-
-  player.buffer = (keys.KeyW || keys.ArrowUp)
-    ? 6
-    : Math.max(0, player.buffer - 1);
-
   player.vy += gravity;
   player.x += player.vx;
   player.y += player.vy;
 
-  player.grounded = false;
-  player.wall = false;
-
-  [...level.platforms, ...level.moving].forEach(p => {
+  level.platforms.forEach(p => {
     if (rect(player, p)) {
-      const py = player.y - player.vy;
-      if (py + player.h <= p.y) {
-        player.y = p.y - player.h;
-        player.vy = 0;
-        player.grounded = true;
-        player.coyote = 6;
-        if (p.dx) player.x += p.dx;
-      } else player.wall = true;
+      player.y = p.y - player.h;
+      player.vy = 0;
     }
-  });
-
-  if (!player.grounded) player.coyote--;
-
-  if (player.buffer > 0 && (player.coyote > 0 || player.wall)) {
-    player.vy = player.jump;
-    if (player.wall) player.vx = -player.facing * 6;
-    player.buffer = 0;
-  }
-
-  if (!(keys.KeyW || keys.ArrowUp) && player.vy < 0)
-    player.vy *= jumpCut;
-
-  if (spawnGrace <= 0) {
-    level.spikes.forEach(s => {
-      if (rect(player, s)) {
-        deaths++;
-        heatmap[Math.floor(player.x / 10)]?.[Math.floor(player.y / 10)]++;
-        currentLevel = checkpointLevel;
-        level = generateLevel(currentLevel);
-        resetPlayer();
-        saveGame();
-      }
-    });
-  }
-
-  if (rect(player, level.goal)) nextLevel();
-
-  level.moving.forEach(p => {
-    p.x += p.dx;
-    if (Math.abs(p.x - p.startX) > p.range) p.dx *= -1;
   });
 }
 
@@ -375,39 +231,39 @@ function update() {
    DRAW
 ===================================================== */
 function draw() {
-  ctx.fillStyle = BIOMES[level.biome].bg;
+  // SAFE CLEAR
+  ctx.fillStyle = "#000";
   ctx.fillRect(0, 0, canvas.width, canvas.height);
 
   if (!gameStarted) {
     ctx.fillStyle = "#fff";
     ctx.font = "28px monospace";
     ctx.textAlign = "center";
-    ctx.fillText("PRESS ANY KEY TO START", canvas.width / 2, canvas.height / 2);
+    ctx.fillText("PRESS ANY KEY TO START", canvas.width/2, canvas.height/2);
     ctx.textAlign = "left";
     return;
   }
 
-  for (let x = 0; x < 80; x++)
-    for (let y = 0; y < 40; y++)
-      if (heatmap[x][y] > 0) {
-        ctx.fillStyle = `rgba(255,0,0,${Math.min(heatmap[x][y]/10,0.4)})`;
-        ctx.fillRect(x*10, y*10, 10, 10);
-      }
+  ctx.fillStyle = BIOMES[level.biome].bg;
+  ctx.fillRect(0, 0, canvas.width, canvas.height);
 
   ctx.fillStyle = "#888";
   level.platforms.forEach(p => ctx.fillRect(p.x, p.y, p.w, p.h));
-  ctx.fillStyle = "#aaa";
-  level.moving.forEach(p => ctx.fillRect(p.x, p.y, p.w, p.h));
-  ctx.fillStyle = BIOMES[level.biome].spike;
-  level.spikes.forEach(s => ctx.fillRect(s.x, s.y, s.w, s.h));
-  ctx.fillStyle = "gold";
-  ctx.fillRect(level.goal.x, level.goal.y, level.goal.w, level.goal.h);
-  ctx.fillStyle = "#4CAF50";
-  ctx.fillRect(player.x, player.y, 30, 30);
 
-  ctx.fillStyle = "#fff";
-  ctx.font = "14px monospace";
-  ctx.fillText(`Level ${currentLevel+1}/${TOTAL_LEVELS}`, 10, 18);
-  ctx.fillText(`Deaths: ${deaths}`, 10, 34);
-  ctx.fillText(
-    `Time: ${getFormattedTime(timerRunning ? performance.now()-run
+  ctx.fillStyle = "#4CAF50";
+  ctx.fillRect(player.x, player.y, player.w, player.h);
+}
+
+/* =====================================================
+   LOOP
+===================================================== */
+function loop() {
+  update();
+  draw();
+  requestAnimationFrame(loop);
+}
+loop();
+</script>
+
+</body>
+</html>
